# estate-backend-canister

./: .clippy.toml  .dockergitignore  .gitignore  Cargo.toml  README.md  canister_ids.json  canister_ids_prod.json  canister_ids_staging.json  dfx.json  instruction.md  plan.md  rust-toolchain.toml  sns_canister_ids.json
.github/workflows/: any-dfx-command.yaml  assign-controller.yaml  cargo-test.yml  create_neuron.yml  first-time-deploy.yml  manage_neuron.yml  neuron_id.yaml  sns-register-dapp.yml  submit-proposal.yml  test_balance.yml  view-canister-logs.yml
scripts/: candid_generator.rs  candid_generator.sh  install_all_canisters.sh  redeploy.sh  seed_data.sh  upgrade_all_canisters_local.sh
scripts/local-sns-testing/: .gitignore  Dockerfile-local-sns-test  README.md  copy_selectively.sh  example_sns_init.yaml  register_new_dapp.sh
scripts/local-sns-testing/video/: register_identity_for_swap.webm
src/backend/: Cargo.toml  can.did
src/backend/src/: controller.rs  lib.rs  memory.rs  migration.rs  models.rs  payment_id_index_tests.rs
src/backend/src/api/: save_user_booking_data.rs
src/backend/src/lifecycle/: mod.rs  post_upgrade.rs  pre_upgrade.rs
src/backend/src/migration/: tests.rs
src/backend/src/migrations/: a1001_payment_id_v2_migration.rs  a1002_default_controllers_migration.rs  mod.rs
src/backend/src/migrations/all_migration_tests/: a1001_payment_id_v2_tests.rs  a1002_default_controllers_migration_test.rs
src/backend/src/models/: booking_details.rs  greet.rs  payment_details.rs  user_details.rs
test/: README.md
test/src/: lib.rs
