[package]
name = "estate-be"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
time = {version = "0.3.36", features = ["formatting", "parsing"]}
#chrono = { version = "0.4", features = ["serde"] }
# pocket-ic = "5.0.0"

[dev-dependencies]
pocket-ic = "5.0.0"
