[package]
name = "estate_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
time = {version = "0.3.36", features = ["formatting", "parsing"]}
chrono = { version = "0.4", features = ["serde"] }
# ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers

[dev-dependencies]
pocket-ic = "6.0.0"
