[package]
name = "estate_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
# ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.7"
serde_json_any_key = "2.0.0"

[dev-dependencies]
pocket-ic = "6.0.0"
